[IRIS-6298] fix: 데이터 연결 오류시, z-index 문제로 오류메세지 보이지 않는 문제 수정

--- a/src/style-product/scss/pages/_studio.scss
+++ b/src/style-product/scss/pages/_studio.scss
@@ -443,7 +443,7 @@
   bottom: auto;
   width: 100%;
   height: 100%;
-  z-index: z("float");
+  z-index: 6;
   overflow: hidden;
 }
 
